// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new rich text parser parses rich text 1`] = `
Object {
  "children": Array [
    Object {
      "attributes": Object {
        "class": "test",
        "id": "3",
      },
      "children": Array [
        Object {
          "attributes": Object {
            "data-codename": "test_item",
            "data-rel": "component",
            "data-type": "item",
            "type": "application/kenticocloud",
          },
          "children": Array [],
          "tagName": "object",
          "type": "tag",
        },
        Object {
          "content": "before text",
          "type": "text",
        },
        Object {
          "attributes": Object {
            "href": "mailto:email@abc.test",
          },
          "children": Array [
            Object {
              "content": "email",
              "type": "text",
            },
          ],
          "tagName": "a",
          "type": "tag",
        },
        Object {
          "content": "after text line break ",
          "type": "text",
        },
        Object {
          "attributes": Object {},
          "children": Array [],
          "tagName": "br",
          "type": "tag",
        },
      ],
      "tagName": "p",
      "type": "tag",
    },
    Object {
      "attributes": Object {},
      "children": Array [
        Object {
          "content": "text span",
          "type": "text",
        },
      ],
      "tagName": "span",
      "type": "tag",
    },
  ],
}
`;

exports[`new rich text resolver resolve all domnodes 1`] = `
Object {
  "childrenNodes": Array [
    Object {
      "attributes": Object {
        "class": "test",
        "id": "3",
      },
      "children": Array [
        Object {
          "attributes": Object {
            "data-codename": "test_item",
            "data-rel": "component",
            "data-type": "item",
            "type": "application/kenticocloud",
          },
          "children": Array [],
          "tagName": "object",
          "type": "tag",
        },
        Object {
          "content": "before text",
          "type": "text",
        },
        Object {
          "attributes": Object {
            "href": "mailto:email@abc.test",
          },
          "children": Array [
            Object {
              "content": "email",
              "type": "text",
            },
          ],
          "tagName": "a",
          "type": "tag",
        },
        Object {
          "content": "after text line break ",
          "type": "text",
        },
        Object {
          "attributes": Object {},
          "children": Array [],
          "tagName": "br",
          "type": "tag",
        },
      ],
      "tagName": "p",
      "type": "tag",
    },
    Object {
      "attributes": Object {},
      "children": Array [
        Object {
          "content": "text span",
          "type": "text",
        },
      ],
      "tagName": "span",
      "type": "tag",
    },
  ],
  "childrenResolvedNodes": Array [
    Object {
      "childrenNodes": Array [
        Object {
          "attributes": Object {
            "data-codename": "test_item",
            "data-rel": "component",
            "data-type": "item",
            "type": "application/kenticocloud",
          },
          "children": Array [],
          "tagName": "object",
          "type": "tag",
        },
        Object {
          "content": "before text",
          "type": "text",
        },
        Object {
          "attributes": Object {
            "href": "mailto:email@abc.test",
          },
          "children": Array [
            Object {
              "content": "email",
              "type": "text",
            },
          ],
          "tagName": "a",
          "type": "tag",
        },
        Object {
          "content": "after text line break ",
          "type": "text",
        },
        Object {
          "attributes": Object {},
          "children": Array [],
          "tagName": "br",
          "type": "tag",
        },
      ],
      "childrenResolvedNodes": Array [
        Object {
          "childrenNodes": Array [],
          "childrenResolvedNodes": Array [],
          "currentNode": Object {
            "attributes": Object {
              "data-codename": "test_item",
              "data-rel": "component",
              "data-type": "item",
              "type": "application/kenticocloud",
            },
            "children": Array [],
            "tagName": "object",
            "type": "tag",
          },
          "currentResolvedNode": "tag",
        },
        Object {
          "childrenNodes": Array [],
          "childrenResolvedNodes": Array [],
          "currentNode": Object {
            "content": "before text",
            "type": "text",
          },
          "currentResolvedNode": "text",
        },
        Object {
          "childrenNodes": Array [
            Object {
              "content": "email",
              "type": "text",
            },
          ],
          "childrenResolvedNodes": Array [
            Object {
              "childrenNodes": Array [],
              "childrenResolvedNodes": Array [],
              "currentNode": Object {
                "content": "email",
                "type": "text",
              },
              "currentResolvedNode": "text",
            },
          ],
          "currentNode": Object {
            "attributes": Object {
              "href": "mailto:email@abc.test",
            },
            "children": Array [
              Object {
                "content": "email",
                "type": "text",
              },
            ],
            "tagName": "a",
            "type": "tag",
          },
          "currentResolvedNode": "tag",
        },
        Object {
          "childrenNodes": Array [],
          "childrenResolvedNodes": Array [],
          "currentNode": Object {
            "content": "after text line break ",
            "type": "text",
          },
          "currentResolvedNode": "text",
        },
        Object {
          "childrenNodes": Array [],
          "childrenResolvedNodes": Array [],
          "currentNode": Object {
            "attributes": Object {},
            "children": Array [],
            "tagName": "br",
            "type": "tag",
          },
          "currentResolvedNode": "tag",
        },
      ],
      "currentNode": Object {
        "attributes": Object {
          "class": "test",
          "id": "3",
        },
        "children": Array [
          Object {
            "attributes": Object {
              "data-codename": "test_item",
              "data-rel": "component",
              "data-type": "item",
              "type": "application/kenticocloud",
            },
            "children": Array [],
            "tagName": "object",
            "type": "tag",
          },
          Object {
            "content": "before text",
            "type": "text",
          },
          Object {
            "attributes": Object {
              "href": "mailto:email@abc.test",
            },
            "children": Array [
              Object {
                "content": "email",
                "type": "text",
              },
            ],
            "tagName": "a",
            "type": "tag",
          },
          Object {
            "content": "after text line break ",
            "type": "text",
          },
          Object {
            "attributes": Object {},
            "children": Array [],
            "tagName": "br",
            "type": "tag",
          },
        ],
        "tagName": "p",
        "type": "tag",
      },
      "currentResolvedNode": "tag",
    },
    Object {
      "childrenNodes": Array [
        Object {
          "content": "text span",
          "type": "text",
        },
      ],
      "childrenResolvedNodes": Array [
        Object {
          "childrenNodes": Array [],
          "childrenResolvedNodes": Array [],
          "currentNode": Object {
            "content": "text span",
            "type": "text",
          },
          "currentResolvedNode": "text",
        },
      ],
      "currentNode": Object {
        "attributes": Object {},
        "children": Array [
          Object {
            "content": "text span",
            "type": "text",
          },
        ],
        "tagName": "span",
        "type": "tag",
      },
      "currentResolvedNode": "tag",
    },
  ],
  "currentNode": null,
  "currentResolvedNode": null,
}
`;
